--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@ input {
     <div id="result"></div>
 
   </body>
-</html>
 
-    <script>
+<script>
       const table = {
 0:0,
        3:2.985,
@@ -388,7 +387,10 @@ function monthsUntilAge67() {
   }
   document.querySelector("#result").innerHTML = output;
 }
-    
+</script>
+</html>
+
+
 
 
 
